--- a/index.html
+++ b/index.html
@@ -7,14 +7,108 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>recipe app</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <h1 class="test">hi</h1>
-        
+        <div class="app">
+            <header class="app__header">
+                <div class="input-container">
+                    <div class="icon-container search-icon-container">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </div>
+                    <label>
+                        <input class="search-food-input" type="search" name="search-food" placeholder="Search">
+                    </label>
+                </div>
+            </header>
+
+            <ul class="food-list">
+                <li class="food">
+                    <img class="food__image" src="./images/cake-test-image.jpg" alt="food image">
+                    <h2 class="food__header">chocolate cake</h2>
+                    <div class="food__more-info">
+                        <div class="food__time">
+                            <i class="fa fa-clock-o food-timer-icon" aria-hidden="true"></i>
+                            <div class="food__time__text">60min</div>
+                        </div>
+
+                        <div class="food__serving">
+                            <div class="food__serving__text">4 servings</div>
+                        </div>
+                    </div>
+
+                    <p class="food__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit...</p>
+                    <button class="food__full-recipe-btn">Full Recipe</button>
+                </li>
+
+
+
+
+                <li class="food">
+                    <img class="food__image" src="./images/cake-test-image.jpg" alt="food image">
+                    <h2 class="food__header">chocolate cake</h2>
+                    <div class="food__more-info">
+                        <div class="food__time">
+                            <i class="fa fa-clock-o food-timer-icon" aria-hidden="true"></i>
+                            <div class="food__time__text">60min</div>
+                        </div>
+
+                        <div class="food__serving">
+                            <div class="food__serving__text">4 servings</div>
+                        </div>
+                    </div>
+
+                    <p class="food__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit...</p>
+                    <button class="food__full-recipe-btn">Full Recipe</button>
+                </li>
+
+
+                <li class="food">
+                    <img class="food__image" src="./images/cake-test-image.jpg" alt="food image">
+                    <h2 class="food__header">chocolate cake</h2>
+                    <div class="food__more-info">
+                        <div class="food__time">
+                            <i class="fa fa-clock-o food-timer-icon" aria-hidden="true"></i>
+                            <div class="food__time__text">60min</div>
+                        </div>
+
+                        <div class="food__serving">
+                            <div class="food__serving__text">4 servings</div>
+                        </div>
+                    </div>
+
+                    <p class="food__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit ipsum dolor sit amet consectetur adipisicing elit...</p>
+                    <button class="food__full-recipe-btn">Full Recipe</button>
+                </li>
+            </ul>
+        </div>
+
         <script src="./app.js" type="module"></script>
     </body>
 </html>
+
+
+<!--
+<li class="food">
+                    <img class="food__image" src="./images/cake-test-image.jpg" alt="food image">
+                    <h2 class="food__header">chocolate cake</h2>
+                    <div class="food__more-info">
+                        <div class="food__serving">
+                            <i class="fa fa-users" aria-hidden="true"></i>
+                            <div class="food__serving__text">4 servings</div>
+                        </div>
+                        <div class="food__time">
+                            <i class="fa fa-clock-o" aria-hidden="true"></i>
+                            <div class="food__time__text">60min</div>
+                        </div>
+                    </div>
+
+                    <button class="food__full-recipe-btn">Full Recipe</button>
+                </li>
+
+
+-->
