--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
             <div class="food-info-popup-container">
                 <section class="food-info-popup">
-                    <!-- <button class="food-info-popup__close-btn">
+                    <button class="food-info-popup__close-btn">
                         <i class="fa fa-times" aria-hidden="true"></i>
-                    </button> -->
+                    </button>
                     <ul class="food-info-popup__icons">
-                        <li class="food-info-popup__icon summary-icon">
+                        <li class="food-info-popup__icon summary-icon current-tab">
                             <i class="fa fa-commenting" aria-hidden="true"></i>
                         </li>
                         <li class="food-info-popup__icon ingredients-icon">
@@ -37,7 +37,7 @@
                     </ul>
 
 
-                    <div>
+                    <div class="food-info-section">
                         <h2 class="food-info-popup__header">Chocolate cake</h2>
                         <div class="food__more-info">
                             <div class="food__time">
@@ -50,7 +50,7 @@
                         </div>
 
                         <ul class="food-info-popup__info">
-                            <li class="food-info-popup__info-item summary-info">
+                            <li class="food-info-popup__info-item summary-info current-tab-text">
                                 <p>
                                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima atque minus nobis, animi totam dolores perspiciatis dolor rem officiis harum illo ea dolorem iure molestiae aut. Sapiente mollitia sequi a.
                                 </p>
@@ -70,7 +70,7 @@
                                 </ul>
                             </li>
                             <li class="food-info-popup__info-item diet-info">
-                                <h3>this diet is...</h3>
+                                <h3>This diet is...</h3>
                                 <ul>
                                     <li>1. gluten free</li>
                                     <li>2. dairy free</li>
