--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <i class="fa fa-times" aria-hidden="true"></i>
                     </button>
                     <ul class="food-info-popup__icons">
-                        <li class="food-info-popup__icon summary-icon current-tab">
+                        <li class="food-info-popup__icon summary-icon">
                             <i class="fa fa-commenting" aria-hidden="true"></i>
                         </li>
                         <li class="food-info-popup__icon ingredients-icon">
@@ -50,7 +50,7 @@
                         </div>
 
                         <ul class="food-info-popup__info">
-                            <li class="food-info-popup__info-item summary-info current-tab-text">
+                            <li class="food-info-popup__info-item summary-info">
                                 <p>
                                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima atque minus nobis, animi totam dolores perspiciatis dolor rem officiis harum illo ea dolorem iure molestiae aut. Sapiente mollitia sequi a.
                                 </p>
@@ -85,7 +85,7 @@
 
 
 
-            <header class="app__header blur">
+            <header class="app__header">
                 <div class="input-container">
                     <div class="icon-container search-icon-container">
                         <i class="fa fa-search" aria-hidden="true"></i>
@@ -98,7 +98,7 @@
 
             
 
-            <main class="app__main-content blur">
+            <main class="app__main-content">
                 <ul class="food-list">
                     <li class="food">
                         <img class="food__image" src="./images/cake-test-image.jpg" alt="food image">
